3rdparty/bicpl-surface/Include/bicpl/object_prototypes.h

#define  Real double
BICAPI  void  set_bintree_delete_function(
    void  (*func)( bintree_struct_ptr * ) );
BICAPI  object_struct  *create_object(
    Object_types   object_type );
BICAPI  Object_types  get_object_type(
    object_struct   *object );
BICAPI  polygons_struct  *get_polygons_ptr(
    object_struct  *object );
BICAPI  void  delete_object(
    object_struct  *object );
BICAPI  void  initialize_polygons(
    polygons_struct   *polygons,
    Colour            col,
    Surfprop          *spr );
BICAPI  void  compute_polygon_normals(
    polygons_struct  *polygons );